--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple datepicker library",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "./node_modules/.bin/babel src -d ."
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,13 @@
   "bugs": {
     "url": "https://github.com/webantic/webantic-datepicker/issues"
   },
-  "homepage": "https://github.com/webantic/webantic-datepicker#readme"
+  "homepage": "https://github.com/webantic/webantic-datepicker#readme",
+  "dependencies": {
+    "mithril": "^1.0.0",
+    "moment": "^2.17.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.22.2",
+    "babel-preset-env": "^1.1.8"
+  }
 }
