--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "webantic-datepicker",
-  "version": "1.0.0",
+  "name": "@webantic/datepicker",
+  "version": "1.0.2",
   "description": "A simple datepicker library",
   "main": "index.js",
   "scripts": {
