--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webantic/datepicker",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A simple datepicker library",
   "main": "index.js",
   "scripts": {
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/webantic/webantic-datepicker#readme",
   "dependencies": {
+    "@webantic/util": "3.2.6",
     "mithril": "^1.0.0",
     "moment": "^2.17.1"
   },
