--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webantic/datepicker",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "A simple datepicker library",
   "main": "index.js",
   "scripts": {
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/webantic/webantic-datepicker#readme",
   "dependencies": {
-    "@webantic/util": "3.2.6",
+    "@webantic/util": "^3.4.4",
     "mithril": "^1.0.0",
     "moment": "^2.17.1"
   },
