--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webantic/datepicker",
-  "version": "1.3.1",
+  "version": "1.3.3",
   "description": "A simple datepicker library",
   "main": "index.js",
   "scripts": {
@@ -23,12 +23,15 @@
   },
   "homepage": "https://github.com/webantic/webantic-datepicker#readme",
   "dependencies": {
-    "@webantic/util": "^3.16.9",
+    "@webantic/util": "8.7.2",
     "mithril": "^1.1.3",
     "moment": "^2.19.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.0"
-  }
+  },
+  "bundledDependencies": [
+    "@webantic/util"
+  ]
 }
